# planetStacker

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/: dataqueue.h  iprocessing.h  planetprocessing.cpp  planetprocessing.h
src/ui/: widget.cpp  widget.h  widget.ui
